<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
 <item
        android:id="@+id/piano_icon" 
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/piano_icon"
        android:title="@string/piano_icon"/>
  
     
 <item
        android:id="@+id/loop_icon" 
        android:orderInCategory="2"
        android:showAsAction="always"
        android:visible="true"
        android:icon="@drawable/loop_icon"
        android:title="@string/loop_icon"
        android:menuCategory="container" >

        <menu>
            <item 
            android:id="@+id/Loop1" 
            android:orderInCategory="1"
            android:title="@string/Loop1"
            android:showAsAction="ifRoom|withText">
    </item>
            <item 
            android:id="@+id/Loop2" 
            android:orderInCategory="2"
            android:title="@string/Loop2"
            android:showAsAction="ifRoom|withText">
    </item>
           <item 
            android:id="@+id/Loop3" 
            android:orderInCategory="3"
            android:title="@string/Loop3"
            android:showAsAction="ifRoom|withText">
    </item> 
     
        </menu>
    </item>
  <item
        android:id="@+id/toggle" 
        android:orderInCategory="3"
        android:showAsAction="always|withText"
        android:title="@string/toggleShots" /> 
          <item
        android:id="@+id/list_rec"
        android:checkable="false"
        android:orderInCategory="200"
        android:title="List Files"/>
    <item
        android:id="@+id/save_rec"
        android:checkable="false"
        android:orderInCategory="300"
        android:title="Save Recording"/>
 
</menu>


